--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <!DOCTYPE html>
-<html><head><title>raw html</title></head><body><h1>raw html index.hm</h1></body></html>
+<html><head>
+<title>raw html</title>
+<link rel="stylesheet" href="css/_template.css">
+</head><body>
+<h1>raw html index.hm</h1>
+<script src="js/_template.js"></script>
+</body></html>
