--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html><head>
 <title>raw html</title>
 <link rel="stylesheet" href="css/_template.css">
+<link rel="stylesheet" href="css/remedy.css">
 </head><body>
 <h1>raw html index.hm</h1>
 <script src="js/_template.js"></script>
